--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -21,3 +21,7 @@ jobs:
           my_var="Hello World"
           echo "Output [$my_var]"
           echo "my_var=$my_var" >> $GITHUB_OUTPUT
+          
+      - name: "Example output call between steps"
+        run: |
+          echo "Output [${{steps.my_step.outputs.my_var}}]"
