--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -21,7 +21,21 @@ jobs:
           my_var="Hello World"
           echo "Output [$my_var]"
           echo "my_var=$my_var" >> $GITHUB_OUTPUT
-          
-      - name: "Example output call between steps"
+     
+  my_job:
+    runs-on: ubuntu-latest
+    outputs:
+      # Map the step outputs to job outputs
+      my_var: ${{steps.my_step.outputs.my_var}}
+    steps:
+      - name: "Example output creation"
+        id: "my_step"
         run: |
-          echo "Output [${{steps.my_step.outputs.my_var}}]"
+          my_var="Hello World"
+          echo "Output [$my_var]"
+          echo "my_var=$my_var" >> $GITHUB_OUTPUT
+  my_second_job:
+    runs-on: ubuntu-latest
+    needs: my_job
+    steps:
+      - run: echo my_var [${{needs.my_job.outputs.my_var}}]
