--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           my_var="Hello World"
           echo "Output [$my_var]"
-          echo "my_var=$my_var" 
+          echo "my_var=$my_var" >> $SIVA
   my_second_job:
     runs-on: ubuntu-latest
     needs: my_job
