--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -1,3 +1,4 @@
+
 name: Output
 
 on:
@@ -24,3 +25,8 @@ jobs:
           my_var="Hello World"
           echo "Output [$my_var]"
           echo "my_var=$my_var" >> $GITHUB_OUTPUT
+  my_second_job:
+    runs-on: ubuntu-latest
+    needs: my_job
+    steps:
+      - run: echo my_var [${{needs.my_job.outputs.my_var}}]
