--- a/.github/call_RW.yml
+++ b/.github/call_RW.yml
@@ -1,7 +1,9 @@
 name: Call a reusable workflow and use its outputs
 
 on:
-  workflow_dispatch:
+  push:
+     branches:
+       - master
 
 jobs:
   job1:
