--- a/.github/workflows/call_RW.yml
+++ b/.github/workflows/call_RW.yml
@@ -19,4 +19,4 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - run: echo ${{ needs.job1.outputs.firstword }} ${{ needs.job1.outputs.secondword }}
+      - run: echo ${{ needs.job1.outputs.TAG }}
