--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - id: step1
         run: |
-          echo $(( $RANDOM % 500000 + 600000 ))
-          TAG=$( echo $(( $RANDOM % 500000 + 600000 )))
+          #echo $(( $RANDOM % 500000 + 600000 ))
+          TAG=$(od -A n -t d -N 1 /dev/urandom )
           echo "TAG=${TAG}" >> GIT_OUTPUT
       
