--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -18,6 +18,5 @@ jobs:
     steps:
       - id: step1
         run: |
-          TAG=$(ls -la)
-          echo "TAG=${TAG}" >> GIT_OUTPUT
+          echo "TAG=45678" >> GIT_OUTPUT
       
