--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -18,5 +18,6 @@ jobs:
     steps:
       - id: step1
         run: |
-          echo "TAG=45678" >> GIT_OUTPUT
+          TAG=$(echo "23456")
+          echo "TAG=$TAG" >> $GIT_OUTPUT
       
