--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -19,5 +19,5 @@ jobs:
       - id: step1
         run: |
           TAG=$(echo "23456")
-          echo "TAG=$TAG" >> $GIT_OUTPUT
+          echo "TAG=$TAG" >> $GITHUB_OUTPUT
       
