--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -1,23 +1,27 @@
-name: Tag manage
+name: Reusable workflow
 
 on:
   workflow_call:
     # Map the workflow outputs to job outputs
     outputs:
-      computedTag:
-        description: "The computed tag output string"
-        value: ${{ jobs.tag-manage.outputs.output1 }}
-     
+      firstword:
+        description: "The first output string"
+        value: ${{ jobs.example_job.outputs.output1 }}
+      secondword:
+        description: "The second output string"
+        value: ${{ jobs.example_job.outputs.output2 }}
+
 jobs:
-  tag-manage:
-    name: Generate Tag output
+  example_job:
+    name: Generate output
     runs-on: ubuntu-latest
     # Map the job outputs to step outputs
     outputs:
-      tagversiondev: ${{ steps.step1.outputs.TAG }}
+      output1: ${{ steps.step1.outputs.firstword }}
+      output2: ${{ steps.step2.outputs.secondword }}
     steps:
       - id: step1
-        run: |
-          TAG=$(echo "23456")
-          echo "TAG=$TAG" >> $GITHUB_OUTPUT
+        run: echo "firstword=hello" >> $GITHUB_OUTPUT
+      - id: step2
+        run: echo "secondword=world" >> $GITHUB_OUTPUT
       
