--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -17,4 +17,6 @@ jobs:
         output1: ${{ steps.step1.outputs.firstword }}
       steps:
         - id: step1
-          run: echo "firstword=hello" >> $GITHUB_OUTPUT
+          run: |
+            GIT_TAG=$(echo "34567")
+            echo "GIT_TAG=v${GIT_TAG}" >> $GITHUB_OUTPUT
