--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -6,7 +6,7 @@ on:
     outputs:
       firstword:
         description: "The first output string"
-        value: ${{ jobs.example_job.outputs.output1 }}
+        value: ${{ jobs.example_job.outputs.GIT_TAG }}
         
 jobs:
   example_job:
@@ -14,7 +14,7 @@ jobs:
       runs-on: ubuntu-latest
       # Map the job outputs to step outputs
       outputs:
-        output1: ${{ steps.step1.outputs.firstword }}
+        output1: ${{ steps.step1.outputs.GIT_TAG }}
       steps:
         - id: step1
           run: |
