--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -19,4 +19,4 @@ jobs:
         - id: step1
           run: |
             # GIT_TAG=$(echo "34567")
-            echo "12345" >> $GITHUB_OUTPUT
+            echo "GIT_TAG=12345" >> $GITHUB_OUTPUT
