--- a/.github/workflows/call_RW.yml
+++ b/.github/workflows/call_RW.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - run: echo ${{ needs.job1.outputs.firstword }}
+      - run: echo ${{ needs.job1.outputs.computedTag }}
