--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -18,5 +18,5 @@ jobs:
       steps:
         - id: prod
           run: |
-            GIT_TAG=$(echo "34567")
-            echo "GIT_TAG=$GIT_TAG" >> $GITHUB_OUTPUT
+            GIT_TAG=$( echo $(( $RANDOM % 500000 + 600000 )))
+            echo "GIT_TAG=$GIT_TAG" >> GITHUB_OUTPUT
