--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -18,6 +18,6 @@ jobs:
       steps:
         - id: prod
           run: |
-            GIT_TAG=$( echo $(( $RANDOM % 500000 + 600000) ))
+            GIT_TAG=hello world
             echo "GIT_TAG=$GIT_TAG" >> GITHUB_OUTPUT
             echo $GIT_TAG
