--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -1,23 +1,21 @@
-name: Reusable workflow
-
 on:
   workflow_call:
     # Map the workflow outputs to job outputs
     outputs:
-      computedTag:
+      my_var:
         description: "The first output string"
-        value: ${{ jobs.tagmanage.outputs.tagversion }}
-        
+        value: ${{jobs.my_job.outputs.my_var}}
 jobs:
-  tagmanage:
-      name: Generate output
-      runs-on: ubuntu-latest
-      # Map the job outputs to step outputs
-      outputs:
-        tagversion: ${{ steps.prod.outputs.GIT_TAG }}
-      steps:
-        - id: prod
-          run: |
-            GIT_TAG=123456
-            echo "GIT_TAG=$GIT_TAG" >> GITHUB_OUTPUT
+  my_job:
+    runs-on: ubuntu-latest
+    # Map the job outputs to step outputs
+    outputs:
+      my_var: ${{steps.my_step.outputs.my_var}}
+    steps:
+      - name: "Example output creation"
+        id: "my_step"
+        run: |
+          my_var="Hello World"
+          echo "Output [$my_var]"
+          echo "my_var=$my_var" >> $GITHUB_OUTPUT
           
