--- a/.github/workflows/call_RW.yml
+++ b/.github/workflows/call_RW.yml
@@ -1,14 +1,13 @@
-name: Call a reusable workflow and use its outputs
-
 on:
   workflow_dispatch:
 
 jobs:
   job1:
+    name: "Call other workflow"
     uses: Ssases/example-voting-app/.github/workflows/RW.yml@master
-
   job2:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - run: echo ${{ needs.job1.outputs.computedTag }}
+      - name: "Print my_var"
+        run: echo my_var [${{needs.job1.outputs.my_var}}]
