--- a/.github/workflows/call_RW.yml
+++ b/.github/workflows/call_RW.yml
@@ -13,4 +13,4 @@ jobs:
     needs: job1
     steps:
       - name: "Print my_var"
-        run: echo my_var [${{needs.job1.outputs.tag}}]
+        run: echo ${{needs.job1.outputs.tag}}
