--- a/.github/workflows/call_RW.yml
+++ b/.github/workflows/call_RW.yml
@@ -19,5 +19,5 @@ jobs:
       uses: Ssases/reusable-workflows/.github/workflows/helm-process.yml@main
       with:
         helm_package: helm/example-voting-app
-        version: ${{needs.job1.outputs.tag}}
+        version: 245671
 
