--- a/.github/workflows/call_RW.yml
+++ b/.github/workflows/call_RW.yml
@@ -16,9 +16,9 @@ jobs:
         run: echo ${{needs.job1.outputs.tag}}
         
   job3:
-      uses: Ssases/reusable-workflows/.github/workflows/helm-process.yml@main
-      with:
-        helm_package: helm/example-voting-app
-        version: 245671
-        run: echo ${{needs.job1.outputs.tag}}
+    uses: Ssases/reusable-workflows/.github/workflows/helm-process.yml@main
+    with:
+      helm_package: helm/example-voting-app
+      version: ${{needs.job1.outputs.tag}}
+    
  
