--- a/.github/workflows/call_RW.yml
+++ b/.github/workflows/call_RW.yml
@@ -16,6 +16,7 @@ jobs:
         run: echo ${{needs.job1.outputs.tag}}
         
   job3:
+    needs: job1
     uses: Ssases/reusable-workflows/.github/workflows/helm-process.yml@main
     with:
       helm_package: helm/example-voting-app
