--- a/.github/workflows/call_RW.yml
+++ b/.github/workflows/call_RW.yml
@@ -13,7 +13,7 @@ jobs:
   job2:
     name: "Helm-Lint"
     needs: job1
-    uses: Ssases/reusable-workflows/.github/workflows/helm_lint.yaml@main
+    uses: Ssases/reusable-workflows/.github/workflows/helm_lint.yml@main
         
   job3:
     name: "Helm Push"
