--- a/.github/workflows/RW.yml
+++ b/.github/workflows/RW.yml
@@ -1,18 +1,20 @@
+name: tag_manage
 on:
   workflow_call:
     # Map the workflow outputs to job outputs
     outputs:
-      tag:
+      computedTag_prod:
         description: "The first output string"
-        value: ${{jobs.tagmanage.outputs.tag}}
+        value: ${{jobs.tag-manage.outputs.tagVersion_prod}}
 jobs:
-  tagmanage:
+  tag-manage:
     runs-on: ubuntu-latest
     # Map the job outputs to step outputs
     outputs:
-      tag: ${{steps.prod.outputs.tag}}
+      tagVersion_prod: ${{steps.prod.outputs.tag}}
     steps:
       - name: "Example output creation"
+        if: github.ref == 'refs/heads/main'
         id: "prod"
         run: |
           tag=$( echo $(( $RANDOM % 500000 + 600000 )))
